@@ -1,5 +1,11 @@
 2014-01-17  Roland McGrath  <roland@redhat.com>
 
+	* strip.c (handle_elf): Check for bogus values in sh_link, sh_info,
+	st_shndx, e_shstrndx, and SHT_GROUP or SHT_SYMTAB_SHNDX data.
+	Don't use assert on input values, instead bail with "illformed" error.
+
+2014-01-17  Roland McGrath  <roland@redhat.com>
+
 	* readelf.c (handle_dynamic, handle_symtab): Check for bogus sh_link.
 	(handle_verneed, handle_verdef, handle_versym, handle_hash): Likewise.
 	(handle_scngrp): Check for bogus sh_info.
